--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                 var configureLink = document.getElementById("configureLink");
                 // changer le href de configureLink
-                configureLink.href = "stremio://" + window.location['host'] +inputValues[0]+"/"+inputValues[1]+"/"+inputValues[2]+"/"+inputValues[3]+"/"+inputValues[4]+"/"+inputValues[5]+"/"+inputValues[6]+"/"+inputValues[7]+"/manifest.json"
+                configureLink.href = "stremio://" + window.location['host'] +"/"+inputValues[0]+"/"+inputValues[1]+"/"+inputValues[2]+"/"+inputValues[3]+"/"+inputValues[4]+"/"+inputValues[5]+"/"+inputValues[6]+"/"+inputValues[7]+"/manifest.json"
             });
         });
     </script>
