--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
             var configureLink = document.getElementById("configureLink");
             // changer le href de configureLink
-            configureLink.href = "stremio://" + window.location['host'] + "/" + inputValues[0] + "/" + inputValues[3] + "/" + inputValues[1] + "/" + inputValues[2] + "/manifest.json";
+            configureLink.href = "stremio://" + window.location['host'] + "/" + inputValues[0] + "/" + inputValues[3] + "/" + encodeURIComponent(inputValues[1]) + "/" + inputValues[2] + "/manifest.json";
         }
 
     </script>
