Fixed typo in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
                                         <input
                                             required
                                             class="form-control form-control-lg"
-                                            placeholder="Enter your Real-Debrid API key"
+                                            placeholder="Enter maximum results per search"
                                             oninput="updateLink()"
                                             id="maxResults"
                                         />
