Initial support for alldebrid service

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
                                         <select required class="form-select" aria-label="" id="serviceProvider" onchange="updateLink()">
                                             <option value="torrent">torrent</option>
                                             <option value="realdebrid">realdebrid</option>
+                                            <option value="alldebrid">alldebrid</option>
                                         </select>
                                     </div>
 
@@ -76,7 +77,7 @@
                                         <input
                                             required
                                             class="form-control form-control-lg"
-                                            placeholder="Enter your Real-Debrid API key"
+                                            placeholder="Enter your Debrid service API key"
                                             id="debridApi"
                                             oninput="updateLink()"
                                         />
